# openvc

./: .flake8  .gitignore  .gitlint  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.claude/skills/release/: SKILL.md
.claude/skills/release/scripts/: check_docs.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  live-ebsi.yml  wiki.yml
CONVENTIONS/: index.html
ROADMAP/: index.html
adr/ADR-0001-ebsi-http-client/: index.html
api/dids-keys/: index.html
api/discovery/: index.html
api/errors/: index.html
api/proofs/: index.html
api/status/: index.html
api/verification/: index.html
docs/: CONVENTIONS.md  ROADMAP.md  SESSION-HANDOFF.md  index.md  threat-model.md  versioning.md
docs/adr/: ADR-0001-ebsi-http-client.md  ADR-0002-async-verification.md  ADR-0003-eu-trusted-lists.md  ADR-0004-ml-dsa-design.md  ADR-0005-mso-mdoc-verification.md  ADR-0006-status-list-issuer-binding.md
docs/api/: async.md  dids-keys.md  discovery.md  errors.md  mdoc.md  observability.md  openid4vp.md  proofs.md  schema.md  status.md  trustlist.md  verification.md
docs/audit/: README.md  assurance.md  threat-model.md
examples/: 01_verify_pipeline.py  02_sd_jwt_presentation.py  03_data_integrity.py  04_status_list.py  05_vp_jwt_presentation.py  06_remote_signing_key.py  07_jcs_no_pyld.py  08_openid4vp_verify.py  09_haip_encrypted_response.py  10_sd_jwt_type_metadata.py  11_spanish_university_credential.py  README.md  _common.py
search/: search_index.json
src/openvc/: __init__.py  aio.py  cache.py  cbor.py  cose.py  errors.py  fetch.py  jwe.py  jwt_vc_issuer.py  keys.py  mdoc.py  multibase.py  observability.py  openid4vp.py  resolvers.py  rp_cert.py  rp_registration.py  schema.py  type_metadata.py  verify.py  x5c.py
src/openvc/did/: __init__.py  base.py  did_jwk.py  did_key.py  did_web.py  did_webvh.py
src/openvc/proof/: __init__.py  _jcs.py  _jws.py  _verify_common.py  data_integrity.py  di_ecdsa_rdfc.py  di_jcs.py  ecdsa_sd.py  errors.py  sd_jwt.py  vc_jwt.py  vp_jwt.py
src/openvc/proof/contexts/: __init__.py
src/openvc/status/: __init__.py  _decompress.py  bitstring.py  issue.py  status_list.py  token_status_list.py
src/openvc/trustlist/: __init__.py  consume.py  errors.py  lote.py  model.py  parse.py  xades.py
src/openvc_ebsi/: __init__.py  errors.py  http.py  models.py  trust.py  verify.py  versioning.py
tests/: test_aio.py  test_batch.py  test_cache.py  test_cbor.py  test_conformance_openid4vp.py  test_conformance_status_list.py  test_conformance_vectors.py  test_cose.py  test_data_integrity.py  test_di_ecdsa_rdfc.py  test_di_jcs.py  test_did_1_1.py  test_did_jwk.py  test_did_webvh.py  test_docs_blocks.py  test_docs_claims.py  test_docs_links.py  test_ebsi_http.py  test_ebsi_verifier.py  test_ecdsa_sd.py  test_ecdsa_sd_interop.py  test_ecdsa_sd_roundtrip.py  test_error_taxonomy.py  test_errors.py  test_examples.py  test_fetch.py  test_fuzz_codecs.py  test_hostile_input.py  test_interop_vectors.py  test_jwe.py  test_jws_crit.py  test_jwt_vc_issuer.py  test_keys.py  test_mdoc.py  test_mldsa.py  test_multibase.py  test_observability.py  test_openid4vp.py  test_openid4vp_ldp.py  test_p384.py  (+26 more)
tests/fixtures/didwebvh/: README.md
tests/fixtures/ebsi/: didr_v5_identifiers.json  tir_v5_attributes.json  tir_v5_issuer.json  tir_v5_issuer_404_problem.json  tir_v5_revisions.json
tests/fixtures/ecdsa_sd/: README.md
tests/fixtures/interop/: README.md
tests/fixtures/interop/sd_jwt_vc/: eudi-pid-holder-key.json  eudi-pid-issuer.pem  eudi-pid-sd-jwt-vc.txt  rfc9901-a3-sd-jwt-vc.txt  rfc9901-a5-issuer-key.json
tests/fixtures/interop/status/: digitalbazaar-100k-50k-revoked-encodedList.txt  w3c-rec-example3-encodedList.txt
tests/fixtures/mdoc/: README.md  annex_d_document_signer.pem  annex_d_iaca_root.pem
tests/fixtures/openid4vp/: haip_encrypted_vp_token.json  sd_jwt_vc_vp_token.json
tests/fixtures/trustlist/: README.md  commission.pem  de-tl.xml  eu-lotl.xml  generate.py
tests/fixtures/trustlist/real/: README.md  es-tl-seq187.xml  es-tl-signer.pem
tests/fixtures/vc_di_ecdsa/: README.md
tests/fixtures/vc_di_eddsa/: README.md
tests/tools/: README.md  openvc-implementation.json  vc_api_shim.py
wiki/: Async-Verification.md  Credential-Schemas.md  Data-Integrity.md  Getting-Started.md  Home.md  Keys-and-HSM.md  Presentations.md  Relying-Party-Certificates.md  Resolving-Issuer-Keys.md  SD-JWT-VC.md  Security-Model.md  Spanish-University-Credential.md  Status-Lists.md  Trust.md  VC-JWT.md  Versioning-and-Deprecation.md  _Footer.md  _Sidebar.md
