[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvc-core"
dynamic = ["version"]
description = "Generic, HSM-friendly Verifiable Credentials core — VC-JWT proofs and DID resolution (key/web) — with an optional read-only EBSI plugin."
readme = "README.md"
# PEP 639 SPDX expression + explicit license files (both GPL and LGPL texts).
license = "LGPL-3.0-or-later"
license-files = ["COPYING", "COPYING.LESSER"]
authors = [
    { name = "Luis González Fernández", email = "luisgf@luisgf.es" },
]
requires-python = ">=3.10"
keywords = [
    "verifiable-credentials", "vc-jwt", "w3c-vc", "did", "did-key", "did-web",
    "did-ebsi", "ebsi", "es256", "eddsa", "ed25519", "cryptography", "jose",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# The core is deliberately dependency-light: signatures (cryptography) and the
# VC-JWT envelope (PyJWT). did:web can be resolved with the stdlib-only fetch in
# openvc.fetch; no HTTP client is required for the core.
dependencies = [
    # >=45 for the X.509 path-validation ExtensionPolicy the x5c verifier relies on
    "cryptography>=45",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
# The EBSI plugin's HTTP client (registry reads) uses httpx.
ebsi = ["httpx>=0.27"]
# The Data Integrity proof suite (eddsa-rdfc-2022) needs a JSON-LD processor for
# RDF canonicalization; VC-JWT and everything else work without it.
data-integrity = ["pyld>=2.0.4"]
# credentialSchema (W3C VC JSON Schema) validation needs a JSON Schema processor;
# everything else works without it. 4.18+ for the `referencing`-based resolver.
schema = ["jsonschema>=4.18"]
dev = ["pytest>=8", "pytest-cov>=5", "mypy>=1.8", "flake8>=7", "gitlint>=0.19"]
# API docs site (mkdocs + mkdocstrings); not needed to use or test the library.
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]
all = ["openvc-core[ebsi,data-integrity,schema,dev]"]

[project.urls]
Homepage = "https://github.com/luisgf/openvc"
Source = "https://github.com/luisgf/openvc"
Changelog = "https://github.com/luisgf/openvc/blob/main/CHANGELOG.md"

# Single source of truth for the version: openvc.__version__ (in src/openvc/__init__.py).
[tool.setuptools.dynamic]
version = { attr = "openvc.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

# Ship the PEP 561 markers (so downstream type checkers use our annotations) and
# the bundled JSON-LD contexts the Data Integrity canonicalizer serves offline
# (openvc/proof/contexts/__init__.py). openvc and openvc_ebsi are separate
# top-level packages, so each needs its own py.typed.
[tool.setuptools.package-data]
"openvc" = ["py.typed"]
"openvc_ebsi" = ["py.typed"]
"openvc.proof.contexts" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.10"
files = ["src"]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
# The shipped (py.typed) public surface is held to a strict-ish bar so a downstream
# type-checker consuming these annotations is not degraded (issue #15).
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

# Third-party deps behind optional extras that ship no type information.
[[tool.mypy.overrides]]
module = ["httpx", "httpx.*", "pyld", "pyld.*", "jsonschema", "jsonschema.*",
          "referencing", "referencing.*"]
ignore_missing_imports = true
